--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html>
    <head>
+      <title><b>My Family</b></title>
    </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+   <body></body>
 </html>
