--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <body>
          <header id = 'mainHeading'>
             <h1><b>My Family</b></h1>
-               <p>This page was made to let you know a little bit about my little family 😁<br>The members of my family (in no particular order) are as follows:</p>
+               <p>This page was made to let you know a little bit about my little family 😁<br>Click on a name below to learn more!</p>
                   <ul id = 'list'>
                      <li>Ariel Parnell</li>
                      <li>Ayana Daniel</li>
@@ -20,7 +20,6 @@
          </header>
 
 
-                     <br>
 
 
          <article>
@@ -32,8 +31,6 @@
                <p>'Use your head for more than a hat rack'<br>'Keep ya head up like ya nose bleeding.'</p>
          </article>         
                         
-
-                     <br><br><br><br>
       
 
          <article>
@@ -48,7 +45,6 @@
          </article>
 
 
-                        <br><br><br><br>
 
 
          <article>
@@ -63,7 +59,6 @@
          </article>
 
 
-                        <br><br><br><br>
 
 
          <article>
@@ -78,7 +73,6 @@
          </article>
 
 
-                        <br><br><br><br>
 
 
          <article>
@@ -91,7 +85,6 @@
          </article>
 
    
-                        <br><br><br><br>
 
 
    </main>
