added href for internal links; finished assignment

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <h1><b>My Family</b></h1>
                <p>This page was made to let you know a little bit about my little family 😁<br>Click on a name below to learn more!</p>
                   <ul id = 'list'>
-                     <li>Ariel Parnell</li>
-                     <li>Ayana Daniel</li>
-                     <li>Aidan Daniel</li>
-                     <li>SavvyCakes</li>
+                     <li><a href = "#Ariel">Ariel Parnell</a></li>
+                     <li><a href = "#Ayana">Ayana Daniel</a></li>
+                     <li><a href = "#Aidan">Aidan Daniel</a></li>
+                     <li><a href = "#Savvy">SavvyCakes</a></li>
+                     <li><a href = "#Dad">Honorable Mention: Mark Anthony Daniel</a></li>
                   </ul>
          </header>
 
@@ -23,7 +24,8 @@
 
 
          <article>
-            <h2 id = 'mb'>Ariel Parnell</h2>
+         <a name = "Ariel"></a>
+            <h2>Ariel Parnell</h2>
             <img src = '../images/PXL_20230621_041625071.jpg'>
             <h3>Bio</h3>
                <p>I am <b>Ariel Parnell</b>, referred to in the family as 'Mama'. Born 👶🏽 on July 12, 1990 in Kansas City, MO I am 33 years old and a mother to 2 beautiful girls 👩🏾‍👧🏽‍👧🏽 and a cat 🐈. My roles are mother, daughter, sister, cousin, friend, employee, and student. I can be described as loving, sincere, honest, direct, introverted and intelligent. 👩🏾👓🎒💜 Some of my hobbies are 2-stepping 🕺🏾💃🏾, singing 🎤, learning 📚 and, now, coding! 👩🏾‍💻 I play a little piano 🎹, a little guitar 🎸 and speak a little Spanish. My goals for the next couple of years are to transition into a Web Development career, earn at least a BA in IT/Programming, perfect my instrumental and lingual skills and get my daughters off to a happy, healthy start for a successful life.</p>
@@ -34,7 +36,8 @@
       
 
          <article>
-            <h2 id = 'mb'>Ayana Daniel</h2>
+         <a name = "Ayana"></a>
+            <h2>Ayana Daniel</h2>
             <img src = '../images/PXL_20230722_231220251.PORTRAIT.jpg'>
             <h3>Bio</h3>
                <p><b>Ayana Daniel</b> is my oldest child, and I sometimes affectionately refer to her as my 'mini-me'. She was born 👶🏽 on September 29, 2010 in Kansas City, MO. As a baby she was very bubbly, happy 😄 and never met a stranger. She is very tall, smart 👓, athletic 🤾🏽‍♀️🏅 and talented. She is definitely a leader and wants to be a veterinarian 👩🏽‍⚕️🐕🐈🐇 and/or professional basketball player ⛹🏽‍♀️ when she grows up. I love 🥰 and appreciate her and look forward to many more years of love and memories with Ayana and watching her grow and acheive her dreams! 💜</p>
@@ -48,7 +51,8 @@
 
 
          <article>
-            <h2 id = 'mb'>Aidan Daniel</h2>
+         <a name = "Aidan"></a>
+            <h2>Aidan Daniel</h2>
             <img src = '../images/PXL_20230605_130305295.PORTRAIT.jpg'>
             <h3>Bio</h3>
                <p><b>Aidan Daniel</b> is my youngest child, and is living proof that the second born is 'gangster'. She was born 👶🏽 on December 31, 2012 in Charleston, SC. As a baby she was a shy and reserved 'mama's baby'. She is funny 🤣 and also very tall, smart 👓, athletic 🤾🏽‍♀️🏅 and talented. She wants to be a professional dancer 💃🏽 and/or gymnist 🤸🏽‍♀️ when she grows up. I love 🥰 and appreciate her and look forward to many more years of love and memories with Aidan and watching her grow and acheive her dreams! 💜</p>
@@ -62,7 +66,8 @@
 
 
          <article>
-            <h2 id = 'mb'>SavvyCakes</h2>
+         <a name = "Savvy"></a>
+            <h2>SavvyCakes</h2>
             <img src = '../images/PXL_20230506_175513442.jpg'>
             <h3>Bio</h3>
                <p><b>SavvyCakes</b> is a 4.5 year old domestic short haired tabby cat 🐈. She became a part of the family 👩🏾‍👧🏽‍👧🏽🏠 2.5 years ago in February of 2021. She is a very calm, nice and loving 😻 cat who absolutely LOVES to be pet. One funny thing about SavvyCakes is that she will literally come in front of someone, plop down on her side suddenly and then stare 👀 at you until you pet her lol. Ayana actually picked Savvy out from a local shelter here in Kansas City called Wayside Waifs. Savvy has been a joy ✨ to have and I look forward to many more years of love and memories with her. 💜</p>
@@ -76,7 +81,8 @@
 
 
          <article>
-            <h3 id = 'mb'>Honorable Mention:<br>Mark Anthony Daniel</h3>
+         <a name = "Dad"></a>
+            <h3>Honorable Mention:<br>Mark Anthony Daniel</h3>
             <img src = '../images/all kids.jpg'>
             <h4>Bio</h4>
                <p id = 'testP' class = 'funParagraph'><b>Mark Anthony ("Tone") Daniel</b> is known in this family as 'Dad'. He was born 👶🏽 on July 13, 1982 in Kansas City, MO. When he was 6 he moved 🛫 to Louisville, KY and lived there until he was 16 years old. After that, he moved 🛬 back to Kansas City and that is where we met in 2009 👨🏽‍❤️‍💋‍👩🏾 and had our first child 👶🏽, Ayana in 2010. In 2012, we moved to Saint George, SC and had our second child 👶🏽, Aidan. It was also there that he started his career as a machinist 🧑🏽‍🏭. Unfortunately we lost him to gun violence on April 11, 2014. 💔<br>Although he is no longer with us physically, I know if he were here he would be proud of every single one of us 💙💜</p>
